# poc-steward-tool-management

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  bazel-steward.yaml  cleanup-local.sh  rules_jvm_external~~maven~maven_install.json  start-local.sh
.github/: bazel-steward.yaml
.github/workflows/: ci.yml
docker/: BUILD.bazel  Dockerfile
src/main/java/com/example/depwatch/: BUILD.bazel  Main.java
