load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_oci//oci:pull.bzl", "oci_pull")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "app_layer",
    srcs = ["//src/main/java/com/example/depwatch:depwatch_deploy.jar"],
    package_dir = "/app",
)

oci_image(
    name = "image",
    base = "@java_base",
    entrypoint = [
        "java",
        "-jar",
        "/app/depwatch_deploy.jar",
    ],
    tars = [":app_layer"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["depwatch:latest"],
)
