load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "depwatch",
    srcs = glob(["*.java"]),
    main_class = "com.example.depwatch.Main",
    visibility = ["//visibility:public"],
    deps = [
        "@depwatch_maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@depwatch_maven//:com_fasterxml_jackson_core_jackson_databind",
        "@depwatch_maven//:org_springframework_boot_spring_boot",
        "@depwatch_maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@depwatch_maven//:org_springframework_boot_spring_boot_starter",
        "@depwatch_maven//:org_springframework_boot_spring_boot_starter_web",
        "@depwatch_maven//:org_springframework_spring_web",
    ],
)
